colt response in COO format to stdout , java 17